Fixing problem with footer content being visually cut off.  Had same problem on Study Spaces, where I fixed it via trying to match HTML markup, but this time just using a CSS override, since I think the markup matchup is a losing battle.

--- a/lai/css/gw_editorial/gwoverrides.scss
+++ b/lai/css/gw_editorial/gwoverrides.scss
@@ -8,8 +8,14 @@
 
 /* =========== GW Page Layout =========== */
 
+/* Not quite an override ... just that #skip-link is now #skip */
 #skip p {
   margin: 0;
+}
+
+/* I don't know why this has a 'margin-bottom: -78px' in Editorial, but it's messing us up because we don't have the same structure that undoes that effect. */
+#gwtoday-local-footer {
+  margin-bottom: 0;
 }
 
 /* =========== GW Header =========== */
